#cmake file for clion ide

cmake_minimum_required(VERSION 3.6)
project(cpp14regress_ide)

set(CMAKE_CXX_STANDARD 14)

set(CPP14REGRESS_IDE_CLANG_INCLUDE_DIR ./../../../include)
set(CPP14REGRESS_IDE_CLANG_SOURCE_DIR ./../../../lib)
set(CPP14REGRESS_IDE_LLVM_INCLUDE_DIR ./../../../../../../llvm/include)
set(CPP14REGRESS_IDE_LLVM_SOURCE_DIR ./../../../../../../llvm/lib)
set(CPP14REGRESS_INCLUDE_DIR ./cpp14regress/inc)
set(CPP14REGRESS_SOURCE_DIR ./cpp14regress/src)

include_directories(
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}
        ${CPP14REGRESS_IDE_LLVM_INCLUDE_DIR}
        ${CPP14REGRESS_INCLUDE_DIR}
)

set(HEADER_FILES
        #clang includes
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Driver/Options.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/AST/AST.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/AST/ASTContext.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/AST/ASTConsumer.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/AST/RecursiveASTVisitor.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/AST/EvaluatedExprVisitor.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/AST/ParentMap.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Frontend/ASTConsumers.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Frontend/FrontendActions.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Frontend/CompilerInstance.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Tooling/CommonOptionsParser.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Tooling/Tooling.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Rewrite/Core/Rewriter.h
        ${CPP14REGRESS_IDE_CLANG_INCLUDE_DIR}/clang/Lex/Lexer.h
        #cpp14regress includes
        ${CPP14REGRESS_INCLUDE_DIR}/base_types.h
        ${CPP14REGRESS_INCLUDE_DIR}/utils.h
        ${CPP14REGRESS_INCLUDE_DIR}/range_based_for.h
        ${CPP14REGRESS_INCLUDE_DIR}/lambda.h
        ${CPP14REGRESS_INCLUDE_DIR}/auto.h
        ${CPP14REGRESS_INCLUDE_DIR}/ast_to_dot.h
        ${CPP14REGRESS_INCLUDE_DIR}/cpp14_scanner.h
        ${CPP14REGRESS_INCLUDE_DIR}/default.h
        ${CPP14REGRESS_INCLUDE_DIR}/decltupe.h
        ${CPP14REGRESS_INCLUDE_DIR}/constuctor_delegation.h
        ${CPP14REGRESS_INCLUDE_DIR}/raw_string.h
        ${CPP14REGRESS_INCLUDE_DIR}/implict_sizeof.h
        ${CPP14REGRESS_INCLUDE_DIR}/digit_separators.h
        ${CPP14REGRESS_INCLUDE_DIR}/alias_type.h
        ${CPP14REGRESS_INCLUDE_DIR}/uniform_initialization.h
        ${CPP14REGRESS_INCLUDE_DIR}/explicit_conversion.h
        ${CPP14REGRESS_INCLUDE_DIR}/in_class_init.h
        ${CPP14REGRESS_INCLUDE_DIR}/strongly_typed_enum.h
        ${CPP14REGRESS_INCLUDE_DIR}/user_literals.h
        ${CPP14REGRESS_INCLUDE_DIR}/final.h
        ${CPP14REGRESS_INCLUDE_DIR}/override.h
        ${CPP14REGRESS_INCLUDE_DIR}/delete.h
        ${CPP14REGRESS_INCLUDE_DIR}/file_preparator.h
        ${CPP14REGRESS_INCLUDE_DIR}/binary_literals.h
        ${CPP14REGRESS_INCLUDE_DIR}/list_init.h
        ${CPP14REGRESS_INCLUDE_DIR}/static_assert.h
        ${CPP14REGRESS_INCLUDE_DIR}/trailing_return.h
        ${CPP14REGRESS_INCLUDE_DIR}/func_templ_default_args.h
        ${CPP14REGRESS_INCLUDE_DIR}/nullptr.h
        ${CPP14REGRESS_INCLUDE_DIR}/alignas.h
        ${CPP14REGRESS_INCLUDE_DIR}/alignof.h
        ${CPP14REGRESS_INCLUDE_DIR}/unicode_literals.h
        ${CPP14REGRESS_INCLUDE_DIR}/inline_namespace.h
        ${CPP14REGRESS_INCLUDE_DIR}/unrestricted_unions.h
        ${CPP14REGRESS_INCLUDE_DIR}/variable_template.h
        )

set(SOURCE_FILES
        #cpp14regress sources
        ${CPP14REGRESS_SOURCE_DIR}/base_types.cpp
        ${CPP14REGRESS_SOURCE_DIR}/utils.cpp
        ${CPP14REGRESS_SOURCE_DIR}/range_based_for.cpp
        ${CPP14REGRESS_SOURCE_DIR}/lambda.cpp
        ${CPP14REGRESS_SOURCE_DIR}/auto.cpp
        ${CPP14REGRESS_SOURCE_DIR}/ast_to_dot.cpp
        ${CPP14REGRESS_SOURCE_DIR}/cpp14_scanner.cpp
        ${CPP14REGRESS_SOURCE_DIR}/default.cpp
        ${CPP14REGRESS_SOURCE_DIR}/decltype.cpp
        ${CPP14REGRESS_SOURCE_DIR}/constuctor_delegation.cpp
        ${CPP14REGRESS_SOURCE_DIR}/raw_string.cpp
        ${CPP14REGRESS_SOURCE_DIR}/implict_sizeof.cpp
        ${CPP14REGRESS_SOURCE_DIR}/digit_separators.cpp
        ${CPP14REGRESS_SOURCE_DIR}/alias_type.cpp
        ${CPP14REGRESS_SOURCE_DIR}/uniform_initialization.cpp
        ${CPP14REGRESS_SOURCE_DIR}/explicit_conversion.cpp
        ${CPP14REGRESS_SOURCE_DIR}/in_class_init.cpp
        ${CPP14REGRESS_SOURCE_DIR}/strongly_typed_enum.cpp
        ${CPP14REGRESS_SOURCE_DIR}/user_literals.cpp
        ${CPP14REGRESS_SOURCE_DIR}/final.cpp
        ${CPP14REGRESS_SOURCE_DIR}/override.cpp
        ${CPP14REGRESS_SOURCE_DIR}/delete.cpp
        ${CPP14REGRESS_SOURCE_DIR}/file_preparator.cpp
        ${CPP14REGRESS_SOURCE_DIR}/binary_literals.cpp
        ${CPP14REGRESS_SOURCE_DIR}/list_init.cpp
        ${CPP14REGRESS_SOURCE_DIR}/static_assert.cpp
        ${CPP14REGRESS_SOURCE_DIR}/trailing_return.cpp
        ${CPP14REGRESS_SOURCE_DIR}/func_templ_default_args.cpp
        ${CPP14REGRESS_SOURCE_DIR}/nullptr.cpp
        ${CPP14REGRESS_SOURCE_DIR}/alignas.cpp
        ${CPP14REGRESS_SOURCE_DIR}/alignof.cpp
        ${CPP14REGRESS_SOURCE_DIR}/unicode_literals.cpp
        ${CPP14REGRESS_SOURCE_DIR}/inline_namespace.cpp
        ${CPP14REGRESS_SOURCE_DIR}/unrestricted_unions.cpp
        ${CPP14REGRESS_SOURCE_DIR}/variable_template.cpp
        #tool main.cpp
        ./cpp14regress/tool/main.cpp
        #clang sources
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/DriverOptions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Multilib.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Compilation.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/ToolChains.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/MSVCToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Tool.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/SanitizerArgs.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Driver.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Tools.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Job.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/ToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/MinGWToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/CrossWindowsToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Phases.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Action.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Types.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/DriverOptions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Multilib.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Compilation.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/ToolChains.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/MSVCToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Tool.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/SanitizerArgs.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Driver.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Tools.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Job.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/ToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/MinGWToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/CrossWindowsToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Phases.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Action.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Types.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/DriverOptions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Multilib.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Compilation.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/ToolChains.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/MSVCToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Tool.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/SanitizerArgs.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Driver.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Tools.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Job.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/ToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/MinGWToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/CrossWindowsToolChain.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Phases.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Action.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Driver/Types.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/TypeLoc.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/APValue.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/CommentBriefParser.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ParentMap.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclBase.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/SelectorLocationsKind.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtOpenMP.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ExprObjC.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ASTTypeTraits.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclOpenMP.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/NestedNameSpecifier.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclObjC.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/Type.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/TemplateBase.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclCXX.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/Comment.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/OpenMPClause.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/Stmt.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/CommentLexer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtCXX.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ExprClassification.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ASTImporter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/TemplateName.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/MicrosoftMangle.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/Mangle.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/RecordLayoutBuilder.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/AttrImpl.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclTemplate.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtPrinter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/CXXInheritance.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ItaniumCXXABI.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/VTTBuilder.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtProfile.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ExternalASTSource.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtObjC.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclPrinter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/TypePrinter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/RecordLayout.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ASTDiagnostic.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/VTableBuilder.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/CommentParser.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/Decl.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/MicrosoftCXXABI.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/InheritViz.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ItaniumMangle.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/CommentSema.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ExprConstant.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/CommentCommandTraits.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclGroup.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtIterator.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ASTContext.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/RawCommentList.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ASTDumper.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/Expr.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/NSAPI.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclarationName.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ASTConsumer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/ExprCXX.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/StmtViz.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/AST/DeclFriend.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/CacheTokens.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/CompilerInstance.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/DependencyGraph.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/TextDiagnostic.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/ASTMerge.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/FixItRewriter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/InclusionRewriter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/FrontendActions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/RewriteTest.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/HTMLPrint.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/RewriteObjC.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/RewriteModernObjC.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/Rewrite/RewriteMacros.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/InitPreprocessor.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/SerializedDiagnosticPrinter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/SerializedDiagnosticReader.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/HeaderIncludeGen.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/FrontendActions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/LayoutOverrideSource.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/DependencyFile.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/InitHeaderSearch.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/CodeGenOptions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/TextDiagnosticPrinter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/ASTConsumers.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/FrontendAction.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/PrintPreprocessedOutput.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/ASTUnit.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/CompilerInvocation.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/ModuleDependencyCollector.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/LangStandards.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/VerifyDiagnosticConsumer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/ChainedDiagnosticConsumer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/ChainedIncludesSource.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/CreateInvocationFromCommandLine.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/MultiplexConsumer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/PCHContainerOperations.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/LogDiagnosticPrinter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/TestModuleFileExtension.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/TextDiagnosticBuffer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/DiagnosticRenderer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Frontend/FrontendOptions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/Core/Lookup.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/Core/Replacement.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/RefactoringCallbacks.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/Refactoring.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/CompilationDatabase.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/CommonOptionsParser.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/ArgumentsAdjusters.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/JSONCompilationDatabase.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/Tooling.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Tooling/FileMatchTrie.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Rewrite/TokenRewriter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Rewrite/RewriteRope.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Rewrite/DeltaTree.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Rewrite/Rewriter.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Rewrite/HTMLRewrite.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/TokenConcatenation.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPLexerChange.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPCaching.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/MacroArgs.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPExpressions.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPCallbacks.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/ScratchBuffer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPConditionalDirectiveRecord.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPMacroExpansion.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/HeaderMap.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PreprocessorLexer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PPDirectives.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/Pragma.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/ModuleMap.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/MacroInfo.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/LiteralSupport.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PreprocessingRecord.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/Preprocessor.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/PTHLexer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/TokenLexer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/Lexer.cpp
        ${CPP14REGRESS_IDE_CLANG_SOURCE_DIR}/Lex/HeaderSearch.cpp
        )

add_executable(cpp14regress_ide ${SOURCE_FILES})
